--- a/app/src/main/res/layout/fragment_down.xml
+++ b/app/src/main/res/layout/fragment_down.xml
@@ -9,13 +9,12 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="350dp"
         android:layout_marginEnd="175dp"
         android:background="@drawable/test" />
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="175dp"
         android:background="@drawable/test" />
     <TextView
@@ -23,15 +22,18 @@
         android:layout_height="wrap_content"
         android:text="Goofy-Goober"
         android:textSize="30dp"
-        android:layout_marginTop="425dp"
+        android:layout_marginTop="75dp"
         android:layout_marginStart="175dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Goofy-Goober"
         android:textSize="30dp"
-        android:layout_marginTop="575dp"
+        android:layout_marginTop="225dp"
         android:layout_marginStart="175dp"/>
+
+
+</FrameLayout>
 
 
 </FrameLayout>
